tests/negative/gold/unresolved-type-test.gold
tests/negative/unresolved-type-test.toit:6:10: error: Unresolved type: 'Unresolved'
  field /Unresolved := unresolved
         ^~~~~~~~~~
tests/negative/unresolved-type-test.toit:6:24: error: Unresolved identifier: 'unresolved'
  field /Unresolved := unresolved
                       ^~~~~~~~~~
tests/negative/unresolved-type-test.toit:8:24: error: Unresolved type: 'Unresolved'
  static static-field /Unresolved := unresolved
                       ^~~~~~~~~~
tests/negative/unresolved-type-test.toit:8:38: error: Unresolved identifier: 'unresolved'
  static static-field /Unresolved := unresolved
                                     ^~~~~~~~~~
tests/negative/unresolved-type-test.toit:10:10: error: Unresolved type: 'Unresolved'
  foo -> Unresolved:
         ^~~~~~~~~~
tests/negative/unresolved-type-test.toit:11:12: error: Unresolved identifier: 'unresolved'
    return unresolved
           ^~~~~~~~~~
tests/negative/unresolved-type-test.toit:13:9: error: Unresolved type: 'Unresolved'
  bar x/Unresolved?:
        ^~~~~~~~~~
tests/negative/unresolved-type-test.toit:14:12: error: Unresolved identifier: 'unresolved'
    return unresolved
           ^~~~~~~~~~
tests/negative/unresolved-type-test.toit:16:24: error: Unresolved type: 'Unresolved'
  gee x/Unresolved? -> Unresolved:
                       ^~~~~~~~~~
tests/negative/unresolved-type-test.toit:16:9: error: Unresolved type: 'Unresolved'
  gee x/Unresolved? -> Unresolved:
        ^~~~~~~~~~
tests/negative/unresolved-type-test.toit:17:12: error: Unresolved identifier: 'unresolved'
    return unresolved
           ^~~~~~~~~~
Compilation failed
